update checkout pages

--- a/index.html
+++ b/index.html
@@ -76,25 +76,25 @@
             <div class="search-hint">
                 <p>Trending Searches:</p>
                 <div>
-                    <a href="categories.html">
+                    <a href="categories.html?data=jeans">
                         <i class="ri-search-line"></i>
                         Jeans
                     </a>
                 </div>
                 <div>
-                    <a href="categories.html">
+                    <a href="categories.html?data=jackets">
                         <i class="ri-search-line"></i>
                         Jackets
                     </a>
                 </div>
                 <div>
-                    <a href="categories.html">
+                    <a href="categories.html?data=bags">
                         <i class="ri-search-line"></i>
                         Bags
                     </a>
                 </div>
                 <div>
-                    <a href="categories.html">
+                    <a href="categories.html?data=hoodie">
                         <i class="ri-search-line"></i>
                         Hoodie
                     </a>
@@ -110,28 +110,28 @@
                     <img src="pictures/display-products/female-model.jpg" alt="">
                     <div class="categories-name">
                         <p>Women</p>
-                        <a href="categories.html">Shop now</a>
+                        <a href="categories.html?data=women">Shop now</a>
                     </div>
                 </div>
                 <div class="categories-item">
                     <img src="pictures/display-products/male-model.jpg" alt="">
                     <div class="categories-name">
                         <p>Men</p>
-                        <a href="categories.html">Shop now</a>
+                        <a href="categories.html?data=men">Shop now</a>
                     </div>
                 </div>
                 <div class="categories-item">
                     <img src="pictures/display-products/children-model.jpg" alt="">
                     <div class="categories-name">
                         <p>Kids</p>
-                        <a href="categories.html">Shop now</a>
+                        <a href="categories.html?data=kids">Shop now</a>
                     </div>
                 </div>
                 <div class="categories-item">
                     <img src="pictures/display-products/home-decoration.jpg" alt="">
                     <div class="categories-name">
                         <p>Home</p>
-                        <a href="categories.html">Shop now</a>
+                        <a href="categories.html?data=home">Shop now</a>
                     </div>
                 </div>
             </div>
@@ -146,7 +146,7 @@
         </div>
         <ul class="nav--categories">
             <li>
-                <span for="btn-1"><a href="categories.html?data=Women">Women</a></span>
+                <span for="btn-1"><a href="categories.html?data=women">Women</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
@@ -154,7 +154,7 @@
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
-                <span><a href="categories.html?data=kidsandbaby">Kids & Baby</a></span>
+                <span><a href="categories.html?data=kids and baby">Kids & Baby</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
@@ -207,7 +207,7 @@
             </a>
             <div class="first-introduce-left-info">
               <p>Private New</p>
-              <a href="">SHOP NOW</a>
+              <a href="categories.html?data=new">SHOP NOW</a>
             </div>
           </div>
         </div>
@@ -313,7 +313,7 @@
       <div class="second-introduce-title">
         <h2>BIG SALE OF THE MONTH</h2>
         <p>Now or Never</p>
-        <a href="">Take a closer look</a>
+        <a href="categories.html?data=sales">Take a closer look</a>
       </div>
       <div class="second-introduce-content">
         <div class="second-introduce-left">
@@ -367,7 +367,7 @@
       <div class="third-introduce-content">
         <div class="third-introduce">
           <div>
-            <a href="">
+            <a href="categories.html?data=jackets">
               <img src="pictures/display-products/zara-men-jacket.jpg" alt="">
             </a>
             <div>
@@ -375,7 +375,7 @@
             </div>
           </div>
           <div>
-            <a href="">
+            <a href="categories.html?data=t-shirts">
               <img src="pictures/display-products/zara-tshirt.jpg" alt="">
             </a>
             <div>
@@ -383,7 +383,7 @@
             </div>
           </div>
           <div>
-            <a href="">
+            <a href="categories.html?data=jeans">
               <img src="pictures/display-products/zara-jeans.jpg" alt="">
             </a>
             <div>
@@ -391,7 +391,7 @@
             </div>
           </div>
           <div>
-            <a href="">
+            <a href="categories.html?data=shoes">
               <img src="pictures/display-products/zara-shoes.jpg" alt="">
             </a>
             <div>
@@ -399,7 +399,7 @@
             </div>
           </div>
           <div>
-            <a href="">
+            <a href="categories.html?data=bags">
               <img src="pictures/display-products/zara-bag.png" alt="">
             </a>
             <div>
@@ -407,7 +407,7 @@
             </div>
           </div>
           <div>
-            <a href="">
+            <a href="categories.html?data=family uniforms">
               <img src="pictures/display-products/family-uniforms.png" alt="">
             </a>
             <div>
@@ -415,7 +415,7 @@
             </div>
           </div>
           <div>
-            <a href="">
+            <a href="categories.html?data=gifts">
               <img src="pictures/display-products/gift-box.jpg" alt="">
             </a>
             <div>
@@ -423,7 +423,7 @@
             </div>
           </div>
           <div>
-            <a href="">
+            <a href="categories.html?data=new">
               <img src="pictures/display-products/zara-new.jpg" alt="">
             </a>
             <div>
