--- a/product-detail.html
+++ b/product-detail.html
@@ -21,176 +21,176 @@
   <!-- HEADER -->
   <header>
     <div class="private-header">
-      <div class="private-header-left-section">
-        <div class="header-menu js-menu-btn">
-          <i class="ri-menu-line"></i>
-          <span>Menu</span>
+        <div class="private-header-left-section">
+            <div class="header-menu js-menu-btn">
+                <i class="ri-menu-line"></i>
+                <span>Menu</span>
+            </div>
+            <div class="header-search">
+                <i class="ri-search-line"></i>
+                <span>Search</span>
+            </div>
         </div>
-        <div class="header-search">
-          <i class="ri-search-line"></i>
-          <span>Search</span>
+
+        <div class="private-header-middle-section">
+            <a href="index.html" class="title">Private</a>
         </div>
-      </div>
 
-      <div class="private-header-middle-section">
-        <a href="index.html" class="title">Private</a>
-      </div>
+        <div class="private-header-right-section">
+            <a href="account.html">
+                <i class="ri-user-line icon--small"></i>
+                <span>Account</span>
+            </a>
+            <a href="cart.html" class="cart-wrapper js-cart-wrapper">
+                <i class="ri-shopping-bag-line icon--small" data-content="0">
+                    <nav class="cart-navbar js-cart-navbar">
+                        <div class="cart-content js-cart-content">
+                            
+                        </div>
 
-      <div class="private-header-right-section">
-        <a href="account.html">
-          <i class="ri-user-line icon--small"></i>
-          <span>Account</span>
-        </a>
-        <a href="cart.html" class="cart-wrapper js-cart-wrapper">
-          <i class="ri-shopping-bag-line icon--small" data-content="0">
-            <nav class="cart-navbar js-cart-navbar">
-              <div class="cart-content js-cart-content">
-
-              </div>
-
-              <div class="cart-calculate-price">
-                <div class="cart-price">
-                  <p>Subtotal:</p>
-                  <p>$<span></span></p>
-                </div>
-                <div class="cart-checkout">
-                  CHECKOUT
-                  (<span></span>)
-                </div>
-              </div>
-            </nav>
-          </i>
-          <span>Cart</span>
-        </a>
-      </div>
+                        <div class="cart-calculate-price">
+                            <div class="cart-price">
+                                <p>Subtotal:</p>
+                                <p>$<span></span></p>
+                            </div>
+                            <div class="cart-checkout">
+                                CHECKOUT
+                                (<span></span>)
+                            </div>
+                        </div>
+                    </nav>
+                </i>
+                <span>Cart</span>
+            </a>
+        </div>
     </div>
 
     <!-- Search container -->
     <nav class="search-navbar js-search-navbar">
-      <div class="search-container">
-        <div class="search-input">
-          <input type="text" placeholder="Search">
-          <i class="ri-search-line search-icon"></i>
-        </div>
+        <div class="search-container">
+            <div class="search-input">
+                <input type="text" placeholder="Search">
+                <i class="ri-search-line search-icon"></i>
+            </div>
 
-        <div class="search-hint">
-          <p>Trending Searches:</p>
-          <div>
-            <a href="categories.html">
-              <i class="ri-search-line"></i>
-              Jeans
-            </a>
-          </div>
-          <div>
-            <a href="categories.html">
-              <i class="ri-search-line"></i>
-              Jackets
-            </a>
-          </div>
-          <div>
-            <a href="categories.html">
-              <i class="ri-search-line"></i>
-              Bags
-            </a>
-          </div>
-          <div>
-            <a href="categories.html">
-              <i class="ri-search-line"></i>
-              Hoodie
-            </a>
-          </div>
-        </div>
+            <div class="search-hint">
+                <p>Trending Searches:</p>
+                <div>
+                    <a href="categories.html?data=jeans">
+                        <i class="ri-search-line"></i>
+                        Jeans
+                    </a>
+                </div>
+                <div>
+                    <a href="categories.html?data=jackets">
+                        <i class="ri-search-line"></i>
+                        Jackets
+                    </a>
+                </div>
+                <div>
+                    <a href="categories.html?data=bags">
+                        <i class="ri-search-line"></i>
+                        Bags
+                    </a>
+                </div>
+                <div>
+                    <a href="categories.html?data=hoodie">
+                        <i class="ri-search-line"></i>
+                        Hoodie
+                    </a>
+                </div>
+            </div>
 
-        <div class="search-matched-title">
-          <p>Popular Categories</p>
-        </div>
+            <div class="search-matched-title">
+                <p>Popular Categories</p>
+            </div>
 
-        <div class="search-matched-categories">
-          <div class="categories-item">
-            <img src="pictures/display-products/female-model.jpg" alt="">
-            <div class="categories-name">
-              <p>Women</p>
-              <a href="categories.html">Shop now</a>
+            <div class="search-matched-categories">
+                <div class="categories-item">
+                    <img src="pictures/display-products/female-model.jpg" alt="">
+                    <div class="categories-name">
+                        <p>Women</p>
+                        <a href="categories.html?data=women">Shop now</a>
+                    </div>
+                </div>
+                <div class="categories-item">
+                    <img src="pictures/display-products/male-model.jpg" alt="">
+                    <div class="categories-name">
+                        <p>Men</p>
+                        <a href="categories.html?data=men">Shop now</a>
+                    </div>
+                </div>
+                <div class="categories-item">
+                    <img src="pictures/display-products/children-model.jpg" alt="">
+                    <div class="categories-name">
+                        <p>Kids</p>
+                        <a href="categories.html?data=kids">Shop now</a>
+                    </div>
+                </div>
+                <div class="categories-item">
+                    <img src="pictures/display-products/home-decoration.jpg" alt="">
+                    <div class="categories-name">
+                        <p>Home</p>
+                        <a href="categories.html?data=home">Shop now</a>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="categories-item">
-            <img src="pictures/display-products/male-model.jpg" alt="">
-            <div class="categories-name">
-              <p>Men</p>
-              <a href="categories.html">Shop now</a>
-            </div>
-          </div>
-          <div class="categories-item">
-            <img src="pictures/display-products/children-model.jpg" alt="">
-            <div class="categories-name">
-              <p>Kids</p>
-              <a href="categories.html">Shop now</a>
-            </div>
-          </div>
-          <div class="categories-item">
-            <img src="pictures/display-products/home-decoration.jpg" alt="">
-            <div class="categories-name">
-              <p>Home</p>
-              <a href="categories.html">Shop now</a>
-            </div>
-          </div>
         </div>
-      </div>
     </nav>
 
     <!-- Menu container -->
     <nav class="menu-navbar js-menu-navbar">
-      <div class="nav-close js-nav-close">
-        <i class="ri-close-line"></i>
-        Close
-      </div>
-      <ul class="nav--categories">
-        <li>
-          <span for="btn-1"><a href="categories.html">Women</a></span>
-          <i class="ri-arrow-right-s-line"></i>
-        </li>
-        <li>
-          <span><a href="categories.html">Men</a></span>
-          <i class="ri-arrow-right-s-line"></i>
-        </li>
-        <li>
-          <span><a href="categories.html">Kids & Baby</a></span>
-          <i class="ri-arrow-right-s-line"></i>
-        </li>
-        <li>
-          <span><a href="categories.html">Home</a></span>
-          <i class="ri-arrow-right-s-line"></i>
-        </li>
-        <li>
-          <span><a href="categories.html">Gifts</a></span>
-          <i class="ri-arrow-right-s-line"></i>
-        </li>
-        <li>
-          <span><a href="categories.html">New</a></span>
-          <i class="ri-arrow-right-s-line"></i>
-        </li>
-        <li>
-          <span><a href="categories.html">Sale</a></span>
-          <i class="ri-arrow-right-s-line"></i>
-        </li>
-      </ul>
-      <ul class="nav--infor">
-        <li>
-          <a href="">About Private</a>
-        </li>
-        <li>
-          <a href="">Services</a>
-        </li>
-        <li>
-          <a href="">Call us</a>
-        </li>
-        <li>
-          <a href="">Find a Store</a>
-        </li>
-      </ul>
+        <div class="nav-close js-nav-close">
+            <i class="ri-close-line"></i>
+            Close
+        </div>
+        <ul class="nav--categories">
+            <li>
+                <span for="btn-1"><a href="categories.html?data=women">Women</a></span>
+                <i class="ri-arrow-right-s-line"></i>
+            </li>
+            <li>
+                <span><a href="categories.html?data=men">Men</a></span>
+                <i class="ri-arrow-right-s-line"></i>
+            </li>
+            <li>
+                <span><a href="categories.html?data=kids and baby">Kids & Baby</a></span>
+                <i class="ri-arrow-right-s-line"></i>
+            </li>
+            <li>
+                <span><a href="categories.html?data=home">Home</a></span>
+                <i class="ri-arrow-right-s-line"></i>
+            </li>
+            <li>
+                <span><a href="categories.html?data=gifts">Gifts</a></span>
+                <i class="ri-arrow-right-s-line"></i>
+            </li>
+            <li>
+                <span><a href="categories.html?data=new">New</a></span>
+                <i class="ri-arrow-right-s-line"></i>
+            </li>
+            <li>
+                <span><a href="categories.html?data=sale">Sale</a></span>
+                <i class="ri-arrow-right-s-line"></i>
+            </li>
+        </ul>
+        <ul class="nav--infor">
+            <li>
+                <a href="">About Private</a>
+            </li>
+            <li>
+                <a href="">Services</a>
+            </li>
+            <li>
+                <a href="">Call us</a>
+            </li>
+            <li>
+                <a href="">Find a Store</a>
+            </li>
+        </ul>
     </nav>
     <div id="overlay"></div>
-  </header>
+</header>
   <!-- MAIN -->
   <main>
     <div class="button-back">
