--- a/account.html
+++ b/account.html
@@ -74,25 +74,25 @@
             <div class="search-hint">
                 <p>Trending Searches:</p>
                 <div>
-                    <a href="categories.html">
+                    <a href="categories.html?data=jeans">
                         <i class="ri-search-line"></i>
                         Jeans
                     </a>
                 </div>
                 <div>
-                    <a href="categories.html">
+                    <a href="categories.html?data=jackets">
                         <i class="ri-search-line"></i>
                         Jackets
                     </a>
                 </div>
                 <div>
-                    <a href="categories.html">
+                    <a href="categories.html?data=bags">
                         <i class="ri-search-line"></i>
                         Bags
                     </a>
                 </div>
                 <div>
-                    <a href="categories.html">
+                    <a href="categories.html?data=hoodie">
                         <i class="ri-search-line"></i>
                         Hoodie
                     </a>
@@ -108,28 +108,28 @@
                     <img src="pictures/display-products/female-model.jpg" alt="">
                     <div class="categories-name">
                         <p>Women</p>
-                        <a href="categories.html">Shop now</a>
+                        <a href="categories.html?data=women">Shop now</a>
                     </div>
                 </div>
                 <div class="categories-item">
                     <img src="pictures/display-products/male-model.jpg" alt="">
                     <div class="categories-name">
                         <p>Men</p>
-                        <a href="categories.html">Shop now</a>
+                        <a href="categories.html?data=men">Shop now</a>
                     </div>
                 </div>
                 <div class="categories-item">
                     <img src="pictures/display-products/children-model.jpg" alt="">
                     <div class="categories-name">
                         <p>Kids</p>
-                        <a href="categories.html">Shop now</a>
+                        <a href="categories.html?data=kids">Shop now</a>
                     </div>
                 </div>
                 <div class="categories-item">
                     <img src="pictures/display-products/home-decoration.jpg" alt="">
                     <div class="categories-name">
                         <p>Home</p>
-                        <a href="categories.html">Shop now</a>
+                        <a href="categories.html?data=home">Shop now</a>
                     </div>
                 </div>
             </div>
@@ -144,31 +144,31 @@
         </div>
         <ul class="nav--categories">
             <li>
-                <span for="btn-1"><a href="categories.html">Women</a></span>
+                <span for="btn-1"><a href="categories.html?data=women">Women</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
-                <span><a href="categories.html">Men</a></span>
+                <span><a href="categories.html?data=men">Men</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
-                <span><a href="categories.html">Kids & Baby</a></span>
+                <span><a href="categories.html?data=kids and baby">Kids & Baby</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
-                <span><a href="categories.html">Home</a></span>
+                <span><a href="categories.html?data=home">Home</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
-                <span><a href="categories.html">Gifts</a></span>
+                <span><a href="categories.html?data=gifts">Gifts</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
-                <span><a href="categories.html">New</a></span>
+                <span><a href="categories.html?data=new">New</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
             <li>
-                <span><a href="categories.html">Sale</a></span>
+                <span><a href="categories.html?data=sale">Sale</a></span>
                 <i class="ri-arrow-right-s-line"></i>
             </li>
         </ul>
