fix intro index-body.html css

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="first-introduce-left">
           <div class="introduce-left-container">
             <a href="">
-              <img src="pictures/display-products/zara-man-jacket.jpg" alt="">
+              <img src="pictures/display-products/zara-man-jacket.jpg" alt="" height="770px">
             </a>
             <div class="first-introduce-left-info">
               <p>Private New</p>
