integrate client-page with laravel

--- a/cart.html
+++ b/cart.html
@@ -53,7 +53,7 @@
                             <div class="cart-calculate-price">
                                 <div class="cart-price">
                                     <p>Subtotal:</p>
-                                    <p>$<span></span></p>
+                                    <p>VND <span></span></p>
                                 </div>
                                 <div class="cart-checkout">
                                     CHECKOUT
