--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="cart-calculate-price">
                             <div class="cart-price">
                                 <p>Subtotal:</p>
-                                <p>$<span></span></p>
+                                <p>VND <span></span></p>
                             </div>
                             <div class="cart-checkout">
                                 CHECKOUT
@@ -226,8 +226,7 @@
                   <div class="card-slide-info">
                     <p>Blazer Shop</p>
                     <div>
-                      <span>1 </span>|
-                      <span>4</span>
+                      <span>1 </span>|<span> 4</span>
                     </div>
                   </div>
                   <div class="cardstack-timer">
@@ -243,8 +242,7 @@
                     <div class="card-slide-info">
                       <p>Dress Shop</p>
                       <div>
-                        <span>2 </span>|
-                        <span>4</span>
+                        <span>2 </span>|<span> 4</span>
                       </div>
                     </div>
                   </div>
@@ -261,8 +259,7 @@
                     <div class="card-slide-info">
                       <p>Jeans Shop</p>
                       <div>
-                        <span>3 </span>|
-                        <span>4</span>
+                        <span>3 </span>|<span> 4</span>
                       </div>
                     </div>
                   </div>
@@ -279,8 +276,7 @@
                     <div class="card-slide-info">
                       <p>Shirt Shop</p>
                       <div>
-                        <span>4 </span>|
-                        <span>4</span>
+                        <span>4 </span>|<span> 4</span>
                       </div>
                     </div>
                   </div>
@@ -326,7 +322,7 @@
             </a>
             <div>
               <p class="second-introduce-name">Shirt With Thin Stripes</p>
-              <p class="second-introduce-price"><del>$87</del> $63</p>
+              <p class="second-introduce-price"><del>87</del><del>VND</del> <span>63</span> VND</p>
             </div>
           </div>
           <div>
@@ -335,7 +331,7 @@
             </a>
             <div>
               <p class="second-introduce-name">3-pack Narrow Belts</p>
-              <p class="second-introduce-price"><del>$20</del> $9</p>
+              <p class="second-introduce-price"><del>87</del><del>VND</del> <span>63</span> VND</p>
             </div>
           </div>
           <div>
@@ -344,7 +340,7 @@
             </a>
             <div>
               <p class="second-introduce-name">2-piece Cotton Set</p>
-              <p class="second-introduce-price"><del>$27</del> $15</p>
+              <p class="second-introduce-price"><del>87</del><del>VND</del> <span>63</span> VND</p>
             </div>
           </div>
           <div>
@@ -353,7 +349,7 @@
             </a>
             <div>
               <p class="second-introduce-name">Slippers With Back Strap</p>
-              <p class="second-introduce-price"><del>$40</del> $29</p>
+              <p class="second-introduce-price"><del>87</del><del>VND</del> <span>63</span> VND</p>
             </div>
           </div>
         </div>
