--- a/account.html
+++ b/account.html
@@ -49,7 +49,7 @@
                         <div class="cart-calculate-price">
                             <div class="cart-price">
                                 <p>Subtotal:</p>
-                                <p>$<span></span></p>
+                                <p>VND <span></span></p>
                             </div>
                             <div class="cart-checkout">
                                 CHECKOUT
