--- a/categories.html
+++ b/categories.html
@@ -51,7 +51,7 @@
                             <div class="cart-calculate-price">
                                 <div class="cart-price">
                                     <p>Subtotal:</p>
-                                    <p>$<span></span></p>
+                                    <p>VND <span></span></p>
                                 </div>
                                 <div class="cart-checkout">
                                     CHECKOUT
