--- a/checkout.html
+++ b/checkout.html
@@ -53,7 +53,7 @@
                             <div class="cart-calculate-price">
                                 <div class="cart-price">
                                     <p>Subtotal:</p>
-                                    <p>$<span></span></p>
+                                    <p>VND <span></span></p>
                                 </div>
                                 <div class="cart-checkout">
                                     CHECKOUT
@@ -260,13 +260,13 @@
                     <div>
                         <div class="inf-order">
                             <p>Subtotal</p>
-                            <p>$<span>0</span></p>
+                            <p>VND <span>0</span></p>
                             <p>Standard Shipping</p>
-                            <p>$<span>0</span></p>
+                            <p>VND <span>0</span></p>
                             <p>Free when you <a href="">Sign in</a> or <a href="">Create an Account</a></p>
                             <p></p>
                             <p>Estimated Total</p>
-                            <p>$<span>0</span></p>
+                            <p>VND <span>0</span></p>
                             <p>Taxes finalized at the end of checkout</p>
                         </div>
                         <div class="checkout-wapper">
