--- a/product-detail.html
+++ b/product-detail.html
@@ -51,7 +51,7 @@
                         <div class="cart-calculate-price">
                             <div class="cart-price">
                                 <p>Subtotal:</p>
-                                <p>$<span></span></p>
+                                <p>VND <span></span></p>
                             </div>
                             <div class="cart-checkout">
                                 CHECKOUT
@@ -220,28 +220,28 @@
             <a href="#">
               <img src="pictures/products/shoes-woman.jpg" alt="">
               <p>LEATHER TRACK SOLE KNEE-HIGH BOOTS</p>
-              <p class="detail-price">$119</p>
+              <p class="detail-price"><span>119</span> VND</p>
             </a>
           </div>
           <div class="perfect-partner">
             <a href="#">
               <img src="pictures/products/skirt-women.jpg" alt="">
               <p>LONG WOOL AND ALPACA BLEND KNIT SKIRT</p>
-              <p class="detail-price">$46</p>
+              <p class="detail-price"><span>46</span> VND</p>
             </a>
           </div>
           <div class="perfect-partner">
             <a href="#">
               <img src="pictures/products/sweater-women.jpg" alt="">
               <p>KNIT SWEATER WITH TRIMS</p>
-              <p class="detail-price">$35</p>
+              <p class="detail-price"><span>36</span> VND</p>
             </a>
           </div>
           <div class="perfect-partner">
             <a href="#">
               <img src="pictures/products/hat-women.jpg" alt="">
               <p>KNIT BEANIE</p>
-              <p class="detail-price">$16</p>
+              <p class="detail-price"><span>16</span> VND</p>
             </a>
           </div>
 
@@ -257,21 +257,21 @@
             <a href="#">
               <img src="pictures/products/jacket-women-2.jpg" alt="">
               <p>CROPPED FAUX SHEARLING PUFFER JACKET</p>
-              <p class="detail-price">$60</p>
+              <p class="detail-price"><span>60</span> VND</p>
             </a>
           </div>
           <div class="perfect-partner">
             <a href="#">
               <img src="pictures/products/jacket-women-3.jpg" alt="">
               <p>ZW COLLECTION DOUBLE-FACED WAISTCOAT</p>
-              <p class="detail-price">$70</p>
+              <p class="detail-price"><span>46</span> VND</p>
             </a>
           </div>
           <div class="perfect-partner">
             <a href="#">
               <img src="pictures/products/jacket-women-4.jpg" alt="">
               <p>ZW COLLECTION CONTRAST WOOL BLEND TRENCH COAT</p>
-              <p class="detail-price">$89</p>
+              <p class="detail-price"><span>46</span> VND</p>
             </a>
           </div>
         </div>
